ファイル・ディレクトリの整理

--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,10 @@
 <body>
     <h2>WebRTC Chat</h2>
     <div id="chat"></div>
-    <input type="text" id="messageInput" placeholder="Enter message">
-    <button id="sendButton">Send</button>
-    <button id="createOfferButton">Create Offer</button>
-    <button id="createAnswerButton">Create Answer</button>
+    <input type="text" id="messageInput" placeholder="メッセージを入力">
+    <button id="sendButton">送信</button>
+    <button id="createOfferButton">オファー</button>
+    <button id="createAnswerButton" disabled>アンサー</button>
     <script src="client.js"></script>
 </body>
 </html>
