ルーム機能を実装

--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>WebRTC Chat</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2>WebRTC Chat</h2>
     <div id="chat"></div>
-    <input type="text" id="messageInput" placeholder="メッセージを入力">
-    <button id="sendButton">送信</button>
-    <button id="createOfferButton">オファー</button>
-    <button id="createAnswerButton" disabled>アンサー</button>
+    <div>
+      <div>
+        ルーム名
+        <input type="text" id="roomNameInput" placeholder="ルーム名" />
+      </div>
+      <div>
+        パスワード
+        <input
+          type="password"
+          id="roomPasswordInput"
+          placeholder="パスワード"
+        />
+      </div>
+      <button id="createRoomButton">ルーム作成</button>
+      <button id="joinRoomButton">ルーム参加</button>
+    </div>
+    <div>
+      <button id="createOfferButton">オファー</button>
+      <button id="createAnswerButton" disabled>アンサー</button>
+    </div>
+    <div>
+      <input type="text" id="messageInput" placeholder="メッセージを入力" />
+      <button id="sendButton">送信</button>
+    </div>
     <script src="client.js"></script>
-</body>
+  </body>
 </html>
